--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -10,9 +10,6 @@
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 
-<!-- Google components -->
-<link rel="import" href="../bower_components/google-chart/google-chart.html">
-
 <!--Chips components  -->
 <link rel="import" href="../bower_components/chips-api/chips-api.html">
 <link rel="import" href="../bower_components/chips-api/behaviors/chips-plugin-behavior.html">
@@ -23,6 +20,7 @@
 <link rel="import" href="elements/ami-viewer.html">
 <link rel="import" href="elements/gex-layout-manager.html">
 <link rel="import" href="elements/series-preview.html">
+<link rel="import" href="elements/image-controls.html">
 
 <link rel="import" href="import-ami.html">
 
@@ -44,11 +42,6 @@
         color: var(--text-primary-color);
         font-weight: lighter;
       }
-
-      google-chart {
-  height: 300px;
-  width: 50em;
-}
 
       .content {
         -webkit-box-flex: 1;
@@ -91,7 +84,6 @@
       }
 
       .panel {
-        width: 156px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -165,11 +157,20 @@
       }
 
       .panel.bch {
+        width: 156px;
+      }
+
+      .bch {
         border-right: 1px solid var(--divider-color);
       }
 
+
+      .panel.ge {
+        width: 256px;
+      }
+
       .ge {
-        overflow: hidden;
+        border-left: 1px solid var(--divider-color);
       }
 
       .loader {
@@ -248,7 +249,7 @@
         <app-toolbar>
           <div main-title>PACS</div>
           <paper-icon-button icon="my-icons:search" on-tap="handleBCH"></paper-icon-button>
-          <paper-icon-button icon="my-icons:close" on-tap="hideBCH"></paper-icon-button>
+          <paper-icon-button icon="my-icons:chevron-left" on-tap="hideBCH"></paper-icon-button>
         </app-toolbar>
         <div class="series">
           <!-- Fetching ready -->
@@ -284,7 +285,6 @@
       <div hidden$="[[visibleBCH]]" class="bch">
         <paper-icon-button icon="my-icons:chevron-right" on-tap="showBCH"></paper-icon-button>
       </div>
-
     </template>
 
     <div id="fullViewer" class="content">
@@ -313,45 +313,11 @@
         </div>
       </div>
       <div class="viewHead">
-          <!-- <google-chart
-          type='histogram'
-          options='{"title": "Days in a month", "legend": "none", "histogram": { "bucketSize": 1 }}'
-          cols='[{"label":"Voxels", "type":"number"}]'
-          rows='[[1],[28],[31]]'>
-        </google-chart> -->
         <!-- <div>
           Make viewew fs
           <paper-icon-button icon="icons:fullscreen" on-tap="changeFullscreenViewer"></paper-icon-button>
         </div> -->
-        <control-panel-2d
-          hidden$="[[_hideControls(0, active)]]"
-          collapse="{{collapse}}"
-          color-lut="{{colorLut0}}"
-          layout="{{layout}}"
-          orientation="{{orientation0}}"
-          controls="{{controls}}"></control-panel-2d>
-        <control-panel-2d
-          hidden$="[[_hideControls(1, active)]]"
-          collapse="{{collapse}}"
-          color-lut="{{colorLut1}}"
-          layout="{{layout}}"
-          orientation="{{orientation1}}"
-          controls="{{controls}}"></control-panel-2d>
-        <control-panel-2d
-          hidden$="[[_hideControls(2, active)]]"
-          collapse="{{collapse}}"
-          color-lut="{{colorLut2}}"
-          layout="{{layout}}"
-          orientation="{{orientation2}}"
-          controls="{{controls}}"></control-panel-2d>
-        <control-panel-2d
-          hidden$="[[_hideControls(3, active)]]"
-          collapse="{{collapse}}"
-          color-lut="{{colorLut3}}"
-          layout="{{layout}}"
-          orientation="{{orientation3}}"
-          controls="{{controls}}"></control-panel-2d>
-
+        <control-panel-2d layout="{{layout}}"></control-panel-2d>
       </div>
 
       <div class="viewersC">
@@ -366,7 +332,12 @@
               slot="s0"
               color-lut="{{colorLut0}}"
               cursor="{{cursor}}"
+              histogram="{{histogram0}}"
+              min-max="{{minMax0}}"
               orientation="{{orientation0}}"
+              window-center="{{windowCenter0}}"
+              window-level="{{windowLevel0}}"
+              window-width="{{windowWidth0}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
               on-activate="_onActivateRenderer"
@@ -375,13 +346,19 @@
               on-dragenter="_onDragEnter"
               on-dragleave="_onDragLeave"
               on-dragover="_onDragOver"></ami-viewer>
+
             <ami-viewer
               id="viewer1"
               data-uid="1"
               slot="s1"
               color-lut="{{colorLut1}}"
               cursor="{{cursor}}"
+              histogram="{{histogram1}}"
+              min-max="{{minMax1}}"
               orientation="{{orientation1}}"
+              window-center="{{windowCenter1}}"
+              window-level="{{windowLevel1}}"
+              window-width="{{windowWidth1}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
               on-activate="_onActivateRenderer"
@@ -389,15 +366,20 @@
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
               on-dragleave="_onDragLeave"
-              on-dragover="_onDragOver"
-              ></ami-viewer>
+              on-dragover="_onDragOver"></ami-viewer>
+
             <ami-viewer
               id="viewer2"
               data-uid="2"
               slot="s2"
               color-lut="{{colorLut2}}"
               cursor="{{cursor}}"
+              histogram="{{histogram2}}"
+              min-max="{{minMax2}}"
               orientation="{{orientation2}}"
+              window-center="{{windowCenter2}}"
+              window-level="{{windowLevel2}}"
+              window-width="{{windowWidth2}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
               on-activate="_onActivateRenderer"
@@ -405,17 +387,20 @@
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
               on-dragleave="_onDragLeave"
-              on-dragover="_onDragOver"
-              ></ami-viewer>
+              on-dragover="_onDragOver"></ami-viewer>
+
             <ami-viewer
               id="viewer3"
               data-uid="3"
               slot="s3"
-              drag
               color-lut="{{colorLut3}}"
               cursor="{{cursor}}"
+              histogram="{{histogram3}}"
+              min-max="{{minMax3}}"
               orientation="{{orientation3}}"
-              index-max="10"
+              window-center="{{windowCenter3}}"
+              window-level="{{windowLevel3}}"
+              window-width="{{windowWidth3}}"
               on-enter-fullscreen="_onEnterFullscreen"
               on-exit-fullscreen="_onExitFullscreen"
               on-activate="_onActivateRenderer"
@@ -423,11 +408,68 @@
               on-drop="_onDrop"
               on-dragenter="_onDragEnter"
               on-dragleave="_onDragLeave"
-              on-dragover="_onDragOver"
-              ></ami-viewer>
+              on-dragover="_onDragOver"></ami-viewer>
+
         </gex-layout-manager>
       </div>
     </div>
+
+    <template is="dom-if" if="[[_isReady(dataStatusBch)]]">
+        <div hidden$="[[!visibleInfo]]" class="panel ge">
+          <app-toolbar>
+            <div main-title>Selected image</div>
+            <paper-icon-button icon="my-icons:chevron-right" on-tap="hideInfo"></paper-icon-button>
+          </app-toolbar>
+
+          <image-controls
+            hidden$="[[_hideControls(0, active)]]"
+            activate="[[_hideControls(0, active)]]"
+            color-lut="{{colorLut0}}"
+            histogram="[[histogram0]]"
+            min-max="[[minMax0]]"
+            orientation="{{orientation0}}"
+            window-center="{{windowCenter0}}"
+            window-level="{{windowLevel0}}"
+            window-width="{{windowWidth0}}"></image-controls>
+
+          <image-controls
+            hidden$="[[_hideControls(1, active)]]"
+            activate="[[_hideControls(1, active)]]"
+            color-lut="{{colorLut1}}"
+            histogram="[[histogram1]]"
+            min-max="[[minMax1]]"
+            orientation="{{orientation1}}"
+            window-center="{{windowCenter1}}"
+            window-level="{{windowLevel1}}"
+            window-width="{{windowWidth1}}"></image-controls>
+
+          <image-controls
+            hidden$="[[_hideControls(2, active)]]"
+            activate="[[_hideControls(2, active)]]"
+            color-lut="{{colorLut2}}"
+            histogram="[[histogram2]]"
+            min-max="[[minMax2]]"9
+            orientation="{{orientation2}}"
+            window-center="{{windowCenter2}}"
+            window-level="{{windowLevel2}}"
+            window-width="{{windowWidth2}}"></image-controls>
+
+          <image-controls
+            hidden$="[[_hideControls(3, active)]]"
+            activate="[[_hideControls(3, active)]]"
+            color-lut="{{colorLut3}}"
+            histogram="[[histogram3]]"
+            min-max="[[minMax3]]"
+            orientation="{{orientation3}}"
+            window-center="{{windowCenter3}}"
+            window-level="{{windowLevel3}}"
+            window-width="{{windowWidth3}}"></image-controls>
+
+        </div>
+        <div hidden$="[[visibleInfo]]" class="ge">
+          <paper-icon-button icon="my-icons:chevron-left" on-tap="showInfo"></paper-icon-button>
+        </div>
+      </template>
   </template>
 
   <script>
@@ -517,7 +559,7 @@
             type: Boolean,
             value: false,
           },
-          visibleGE: {
+          visibleInfo: {
             type: Boolean,
             value: true,
             observer: '_visibleGeChanged',
@@ -742,16 +784,16 @@
         this.visibleBCH = false;
       }
 
-      hideGE() {
-        this.visibleGE = false;
+      hideInfo() {
+        this.visibleInfo = false;
       }
 
       showBCH() {
         this.visibleBCH = true;
       }
 
-      showGE() {
-        this.visibleGE = true;
+      showInfo() {
+        this.visibleInfo = true;
       }
 
       _dataStatusBchChanged(status) {
@@ -768,12 +810,14 @@
       }
 
       _visibleGeChanged(visible) {
+        this._layoutSizeChanged();
         return;
         // this.$.renderBch.resize();
         // this.$.renderGe.resize();
       }
 
       _visibleBcgChanged(visible) {
+        this._layoutSizeChanged();
         return;
         // this.$.renderBch.resize();
         // this.$.renderGe.resize();
@@ -1176,6 +1220,7 @@
 
       _resizeListener() {
         this._layoutSizeChanged();
+        // this.$.imageControls.resize();
       }
 
       _layoutSizeChanged() {
